--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -9,6 +9,7 @@ $txt-color: #f5eeee;
 $txt-color-secondary: #161515;
 $brand-color: #ec008c;
 $secondary-brand-color: #fc6767;
+$input-color: #eff2f9;
 
 
 // Breakpoints
