change design of add new section for resume

--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -3,14 +3,21 @@
     z-index: 10;
     background-color: white;
     padding: 48px;
+    padding-block-start: 100px;
 
     .resume-header {
+        position: fixed;
+        top: 0;
+        left: 25%;
+        transform: translateX(-50%);
+        background-color: $gray-color;
+        z-index: 50;
         display: flex;
         align-items: center;
-        background-color: white;
-        border-radius: 1em;
-        height: 80px;
-        gap: 48px;
+        border-bottom-right-radius: 1em;
+        border-bottom-left-radius: 1em;
+        padding: 24px;
+        gap: 24px;
 
         >* {
             cursor: pointer;
@@ -39,12 +46,12 @@
 
                 &.router-link-exact-active {
                     p {
-                        color: #ec008c;
+                        color: white;
                     }
 
                     span {
                         svg {
-                            fill: #ec008c;
+                            fill: white;
                         }
                     }
                 }
@@ -391,43 +398,11 @@
 
         .modal-container {
 
-            .black-screen {
-                width: 100%;
-                height: 100vh;
-                background-color: rgba(0, 0, 0, 0.397);
-                position: fixed;
-                top: 0;
-                left: 0;
-            }
-
             .add-sect-modal {
-                position: fixed;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                z-index: 50;
-                width: 80%;
                 background-color: white;
-                padding: 40px;
+                padding-block: 40px;
                 border-radius: 1em;
 
-                .add-modal-header {
-                    display: flex;
-                    justify-content: space-between;
-
-                    h1 {
-                        font-weight: 800;
-                        font-size: rem(36px);
-                    }
-
-                    span {
-                        cursor: pointer;
-
-                        svg {
-                            scale: 2;
-                        }
-                    }
-                }
 
                 .modal-content-list {
                     display: grid;
