--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -5,10 +5,11 @@ $bg-color: #f3f4f6;
 
 $primary-color: #142850;
 $secondary-color: #27496D;
+$gray-color: #656e83;
 $txt-color: #f5eeee;
 $txt-color-secondary: #161515;
-$brand-color: #ec008c;
-$secondary-brand-color: #fc6767;
+$brand-color: #FC477F;
+$secondary-brand-color: #F28344;
 $input-color: #eff2f9;
 
 
