--- a/src/assets/scss/views/_resume-app.scss
+++ b/src/assets/scss/views/_resume-app.scss
@@ -11,7 +11,7 @@
         align-items: center;
         flex-basis: 50%;
         height: 100%;
-        background-color: #656e83;
+        background-color: $gray-color;
         padding: -5vw;
 
 
