--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -5,6 +5,7 @@ $bg-color: #f3f4f6;
 
 $primary-color: #142850;
 $secondary-color: #27496D;
+$link-color:#1a91f0;
 $gray-color: #656e83;
 $txt-color: #f5eeee;
 $txt-color-secondary: #161515;
