--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -3,98 +3,95 @@
     z-index: 10;
     background-color: white;
     padding: 48px;
-    padding-block-start: 100px;
 
     .resume-header {
-        position: fixed;
-        top: 0;
-        left: 25%;
-        transform: translateX(-50%);
-        background-color: $gray-color;
         z-index: 50;
+        height: 72px;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         border-bottom-right-radius: 1em;
         border-bottom-left-radius: 1em;
-        padding: 24px;
-        gap: 24px;
+        padding-block-end: 24px;
+        padding-inline-start: 48px;
 
-        >* {
-            cursor: pointer;
+        .header-nav {
             display: flex;
-            flex-direction: column;
+            gap: 24px;
             align-items: center;
 
-            a,
-            .download-wrapper {
+            >* {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
 
-                p {
-                    font-weight: 100;
-                    color: $primary-color;
-                }
+                a,
+                .download-wrapper {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
 
-                span {
-                    svg {
-                        fill: $primary-color;
-                        width: 32px;
-                        height: 32px;
-                    }
-                }
-
-                &.router-link-exact-active {
                     p {
-                        color: white;
+                        font-weight: 800;
+                        font-size: rem(18px);
+                        letter-spacing: 2px;
+                        color: $primary-color;
+                        text-transform: uppercase;
                     }
 
-                    span {
-                        svg {
-                            fill: white;
+
+                    &.router-link-exact-active {
+                        p {
+                            box-shadow: 0px 2px 0px 0px $primary-color;
+                            line-height: 2;
                         }
-                    }
-                }
 
+
+                    }
+
+                }
             }
         }
+
 
 
     }
 
     .resume-form {
-        border-radius: 1em;
         margin-block: 24px;
-        overflow: hidden;
         padding-block-end: 24px;
-        height: 80px;
         transition: .5s;
 
         .resume-title {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 80px;
+            gap: 8px;
+            flex-direction: column;
+            height: 50px;
             pointer-events: auto;
             padding-inline: 48px;
             cursor: pointer;
-            background-color: $input-color;
 
             h1 {
                 font-size: rem(24px);
                 font-weight: 800;
             }
 
-            span {
+            p {
+                color: $link-color;
+                font-size: rem(16px);
+                font-weight: 800;
 
-                svg {
-                    scale: 1.4;
+                span {
+                    svg {
+                        fill: $link-color;
+                    }
                 }
             }
         }
 
         .resume-personal {
             padding-inline: 48px;
+            position: relative;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 24px;
@@ -114,6 +111,7 @@
                     background-color: $input-color;
                     height: 50px;
                     border: none;
+                    border-radius: 0px;
 
                     &:focus {
                         box-shadow: none;
@@ -142,15 +140,15 @@
 
                 &.file-input {
                     grid-area: file;
-                    position: relative;
+                    position: absolute;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    top: 75%;
-                    transform: translateY(-75%);
+                    top: 24px;
+                    right: 0px;
+                    height: 148px;
                     background-color: $input-color;
-                    aspect-ratio: 1 / 1;
-                    border-radius: 10em;
+                    // aspect-ratio: 1 / 1;
 
                     span {
                         position: absolute;
@@ -200,6 +198,7 @@
                     grid-column: 1/-1;
 
                     textarea {
+                        border-radius: 0px;
                         border: none;
                         background-color: $input-color;
                         resize: none;
@@ -225,6 +224,7 @@
 
                     textarea {
                         border: none;
+                        border-radius: 0px;
                         background-color: $input-color;
                         resize: none;
 
@@ -237,24 +237,18 @@
         }
 
         .add-info {
+            padding-inline: 48px;
 
             .resume-cmp-list {
                 display: flex;
                 flex-direction: column;
 
-                &:first-child {
-                    border-top: 5px solid $input-color;
-                }
-
                 .resume-cmp-preview {
                     cursor: pointer;
                     display: flex;
                     align-items: center;
-                    height: 70px;
-
-                    border-bottom: 5px solid $input-color;
+                    height: 50px;
                     gap: 12px;
-                    padding-inline: 48px;
 
                     h3 {
                         font-size: rem(16px);
@@ -265,34 +259,38 @@
                         font-size: rem(16px);
                     }
 
-                    &:hover {
-                        background-color: $input-color;
+                    @include hover {
+                        opacity: .8;
                     }
                 }
 
+                >*:last-child {
+                    margin-bottom: 12px;
+                }
 
             }
 
             .add-btn {
                 display: flex;
                 align-items: center;
-                margin: auto;
                 height: 45px;
                 padding-inline: 16px;
-                border: 5px solid darken(white, 6%);
-                border-radius: 2em;
+                background-color: $gray-color;
 
                 span {
-                    padding-inline-end: 8px;
 
                     svg {
                         width: 28px;
                         height: 28px;
+                        scale: .8;
+                        fill: $txt-color;
                     }
                 }
 
                 p {
                     font-weight: 800;
+                    color: $txt-color;
+                    padding-inline-end: 6px;
                 }
             }
         }
@@ -326,32 +324,30 @@
         bottom: 0px;
 
         .save {
-            @include btn($brand-color, $secondary-brand-color);
             cursor: pointer;
             width: 140px;
             height: 50px;
             display: flex;
             align-items: center;
-            justify-content: space-evenly;
-            border-radius: 2em;
+            justify-content: center;
+            color: #656e83;
+            border: 2px solid #656e83;
 
             span {
 
                 svg {
-                    fill: $txt-color;
+                    fill: $primary-color;
                     scale: 1.2;
                 }
             }
 
-            .seperator {
-                height: 50%;
-                width: 1px;
-                background-color: $txt-color;
-            }
-
             .save-btn {
                 font-weight: 800;
-                color: $txt-color;
+                color: $primary-color;
+            }
+
+            @include hover {
+                box-shadow: 3px 3px white, 5px 5px $gray-color;
             }
         }
 
@@ -370,36 +366,42 @@
 
     .add-section {
 
+        padding-inline: 48px;
+
         .add-sect-cta {
             .add-sect-btn {
-                margin: auto;
                 display: flex;
                 gap: 8px;
                 align-items: center;
                 justify-content: center;
-                width: 280px;
-                height: 60px;
-                border-radius: 2em;
-                color: $txt-color;
-                @include btn($brand-color, $secondary-brand-color);
+                width: 220px;
+                height: 50px;
+                color: $gray-color;
+                border: 2px solid $gray-color;
+                z-index: 50;
 
                 p {
+                    color: $primary-color;
                     font-weight: 800;
                 }
 
                 span {
                     svg {
                         scale: 1.4;
-                        fill: $txt-color;
+                        fill: $primary-color;
                     }
                 }
+
+                @include hover {
+                    box-shadow: 3px 3px white, 5px 5px $gray-color;
+                }
+
             }
         }
 
         .modal-container {
 
             .add-sect-modal {
-                background-color: white;
                 padding-block: 40px;
                 border-radius: 1em;
 
@@ -407,8 +409,7 @@
                 .modal-content-list {
                     display: grid;
                     gap: 18px;
-                    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-                    padding-top: 24px;
+                    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 
                     .modal-content-preview {
                         cursor: pointer;
@@ -417,8 +418,7 @@
                         justify-content: center;
                         padding-inline: 18px;
                         padding-block: 24px;
-                        background-color: darken(white, 8%);
-                        border-radius: 1em;
+                        background-color: $input-color;
                         height: 120px;
                         transition: .2s;
 
