--- a/src/assets/scss/views/_resume-app.scss
+++ b/src/assets/scss/views/_resume-app.scss
@@ -12,13 +12,12 @@
         flex-basis: 50%;
         height: 100%;
         background-color: $gray-color;
-        padding: -5vw;
-
+        padding: 48px;
 
         .a4-resume {
             background-color: white;
             aspect-ratio: 1 / 1.414;
-            height: 42vw;
+            height: 45vw;
             position: relative;
         }
     }
