--- a/src/assets/scss/components/_resume-form.scss
+++ b/src/assets/scss/components/_resume-form.scss
@@ -2,18 +2,24 @@
     flex-basis: 50%;
     z-index: 10;
     background-color: white;
-    padding: 48px;
+    padding-inline: 48px;
+    padding-block-end: 48px;
+    overflow-y: auto;
+
 
     .resume-header {
         z-index: 50;
-        height: 72px;
+        height: 120px;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         justify-content: space-between;
         border-bottom-right-radius: 1em;
         border-bottom-left-radius: 1em;
         padding-block-end: 24px;
         padding-inline-start: 48px;
+        position: sticky;
+        top: 0px;
+        background-color: white;
 
         .header-nav {
             display: flex;
@@ -57,7 +63,7 @@
             display: flex;
             align-items: center;
             background-image: linear-gradient(to right, $link-color, darken($link-color, 6%));
-            height: 100%;
+            height: 50px;
             padding-inline: 10px;
             cursor: pointer;
 
@@ -309,7 +315,7 @@
                                             background-color: $link-color;
                                         }
 
-                                        @include hover{
+                                        @include hover {
                                             border: 1px solid $link-color;
                                         }
                                     }
@@ -344,6 +350,66 @@
                     }
                 }
             }
+        }
+
+        .resume-skills {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 24px;
+            padding-inline: 48px;
+
+            .resume-input {
+                label {
+                    font-weight: 600;
+                }
+
+                input {
+                    background-color: $input-color;
+                    height: 50px;
+                    border: none;
+                    border-radius: 0;
+
+                    &:focus {
+                        box-shadow: none;
+                    }
+
+                }
+
+                &.level-input {
+                    width: 100%;
+
+                    label {
+                        margin-bottom: 0.5rem;
+                    }
+
+                    p {
+                        font-size: rem(14px);
+                        margin-bottom: 0.5rem;
+
+                        span {
+                            font-weight: 800;
+                        }
+                    }
+
+                    .level-list {
+                        display: flex;
+                        gap: 12px;
+
+                        .level-preview {
+                            cursor: pointer;
+                            background-color: $input-color;
+                            flex-grow: 1;
+                            height: 50px;
+
+                            &.selected {
+                                background-color: $link-color;
+                            }
+                        }
+                    }
+                }
+
+            }
+
         }
 
         .add-info {
