--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -2,8 +2,8 @@
     padding: 48px;
     transform-origin: top left;
     position: absolute;
-    width: 100%;
     height: 100%;
+    aspect-ratio: 1 / 1.414;
 
     .personal-info {
         display: flex;
@@ -128,10 +128,6 @@
                 }
             }
         }
-
-        .experience-list{
-            padding-block-start: 14px;
-        }
     }
 
     .profile-info {
@@ -146,11 +142,61 @@
         }
 
         .education-about-txt {
-            padding-top: 8px;
+            padding-block: 8px;
+
 
             p {
                 font-size: rem(16px);
                 line-height: 1.2;
+            }
+        }
+    }
+
+    .skills-info {
+        .title {
+            height: 30px;
+            border-bottom: 2px solid $primary-color;
+
+            h1 {
+                font-size: rem(20px);
+                font-weight: 800;
+            }
+
+        }
+
+        .skill-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            padding-block: 12px;
+
+            .skill-preview {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-basis: 45%;
+
+                h2 {
+                    font-size: rem(16px);
+                    font-weight: 800;
+                }
+
+                .indication {
+                    display: flex;
+
+                    .level-indication {
+                        height: 8px;
+                        width: 8px;
+                        border-radius: 2em;
+                        margin-inline-end: 6px;
+                        background-color: darken($input-color, 6%);
+
+                        &.active {
+                            background-color: $primary-color;
+                        }
+                    }
+
+                }
             }
         }
     }
