drag and drop ready

--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -8,6 +8,12 @@ body {
 	font-family: 'proxima-nova';
 	background-color: $bg-color;
 	color: $primary-color;
+
+	&.dragging {
+		* {
+			cursor: grabbing !important;
+		}
+	}
 }
 
 h1,
