--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,4 +1,3 @@
-
 // Setup
 @import 'setup/variables';
 @import 'setup/functions';
@@ -18,8 +17,8 @@
 @import 'components/modal';
 @import 'components/user-msg';
 @import 'components/resume-form';
+@import 'components/resume-customize';
 @import 'components/auth-form';
 
 // Templates
 @import 'templates/template-no1';
-
