Added heading color picker

--- a/src/assets/scss/components/_resume-customize.scss
+++ b/src/assets/scss/components/_resume-customize.scss
@@ -162,6 +162,30 @@
                 }
             }
         }
+
+        .heading-color {
+            margin-block: 24px;
+            
+            .sub-title {
+                h2 {
+                    font-size: rem(16px);
+                    font-weight: 800;
+                }
+            }
+
+            .color-picker {
+                margin-block-start: 8px;
+                display: flex;
+                gap: 12px;
+
+                input {
+                    display: flex;
+                    justify-content: flex-start;
+                    width: 30%;
+                    height: 40px;
+                }
+            }
+        }
     }
 }
 
