--- a/src/assets/scss/components/_resume-customize.scss
+++ b/src/assets/scss/components/_resume-customize.scss
@@ -165,7 +165,7 @@
 
         .heading-color {
             margin-block: 24px;
-            
+
             .sub-title {
                 h2 {
                     font-size: rem(16px);
@@ -175,15 +175,64 @@
 
             .color-picker {
                 margin-block-start: 8px;
-                display: flex;
-                gap: 12px;
 
-                input {
+                .color-list {
                     display: flex;
-                    justify-content: flex-start;
-                    width: 30%;
-                    height: 40px;
+                    gap: 8px;
+                    flex-wrap: wrap;
+
+                    .color-preview {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        cursor: pointer;
+                        height: 40px;
+                        width: 40px;
+                        border-radius: 2em;
+
+                        .checkmark {
+                            svg {
+                                scale: 1.3;
+
+                                path {
+                                    stroke: $txt-color;
+                                }
+                            }
+                        }
+
+                        &.empty {
+                            border: 1px solid $gray-color;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            overflow: hidden;
+
+                            .line {
+                                width: 1px;
+                                height: 100%;
+                                background-color: $gray-color;
+                                transform: rotate(45deg);
+                            }
+                        }
+
+                        &.rainbow {
+                            position: relative;
+                            background: conic-gradient(from 90deg, violet, indigo, blue, green, yellow, orange, red, violet);
+
+                            input {
+                                opacity: 0;
+                                cursor: pointer;
+                                position: absolute;
+                                display: flex;
+                                justify-content: flex-start;
+                                width: 100%;
+                                height: 100%;
+                                border-radius: 2em;
+                            }
+                        }
+                    }
                 }
+
             }
         }
     }
