--- a/src/assets/scss/templates/_template-no1.scss
+++ b/src/assets/scss/templates/_template-no1.scss
@@ -4,6 +4,7 @@
     position: absolute;
     height: 100%;
     aspect-ratio: 1 / 1.414;
+    color: black;
 
     .personal-info {
         display: flex;
@@ -204,7 +205,6 @@
         height: 30px;
         border-bottom: 2px solid $primary-color;
         text-transform: capitalize;
-
 
         h1 {
             font-size: rem(20px);
